--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.7.0",
     "mongoose": "^6.4.1",
     "socket.io": "^4.5.1"
   }
